# COP290-A1

./: .gitignore  CMakeLists.txt  README.md  computeDensities.cpp  computeDensities_resolution.cpp  computeDensities_spatialThreading.cpp  computeDensities_subsampling.cpp  computeDensities_temporalThreading.cpp  correctPerspective.cpp  densities.hpp  homography.hpp  main.cpp  main.tex  plot.ipynb  run.sh  utility.ipynb  utility.py
Resolution/: 1_0.csv  1_2.csv  1_5.csv  2_0.csv  3_0.csv  4_0.csv  res.csv
SpatialThreading/: 0.csv  1.csv  12.csv  2.csv  4.csv  8.csv  res.csv
Subsampling/: 1.csv  10.csv  2.csv  20.csv  5.csv  res.csv
TemporalThreading/: 1.csv  12.csv  2.csv  4.csv  8.csv  res.csv
